--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -2,11 +2,14 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  background-color: #fff;
+  background-color: #000;
+  display: flex;
+  justify-content: space-between;
 
   :global {
     .menu {
       text-align: right;
+      // flex: 1;
     }
   }
 }
