--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -5,6 +5,9 @@
   background-color: #fff;
   display: flex;
   justify-content: space-between;
+  padding: 0px 88px;
+  height: 80px;
+  align-items: center;
 
   :global {
     .menu {
