--- a/src/pages/Home/style.less
+++ b/src/pages/Home/style.less
@@ -12,75 +12,13 @@
       justify-content: center;
     }
 
-    .daydream-wrapper {
-      position: relative;
-      width: 425 * 0.9px;
-      height: 600 * 0.9px;
-      margin-right: 100px;
-
-      .daydream-mask {
-        color: #fff;
-        text-align: center;
-        line-height: 600 * 0.9px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, 0.6);
-        opacity: 0;
-      }
-
-      .daydream {
-        width: 425 * 0.9px;
-        height: 600 * 0.9px;
-        transition: 0.3s;
-      }
-
-      &:hover {
-        .daydream-mask {
-          opacity: 0.4;
-        }
-      }
-    }
-
-    .objects-wrapper {
-      position: relative;
-      width: 450 * 0.9px;
-      height: 600 * 0.9px;
-
-      .objects-mask {
-        color: #fff;
-        text-align: center;
-        line-height: 600 * 0.9px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, 0.6);
-        opacity: 0;
-      }
-
-      .objects {
-        width: 450 * 0.9px;
-        height: 600 * 0.9px;
-      }
-
-      &:hover {
-        .objects-mask {
-          opacity: 0.4;
-        }
-      }
-    }
-
     .image-wrapper {
       position: relative;
       width: 450 * 0.9px;
       height: 600 * 0.9px;
 
       .image-mask {
-        color: #fff;
+        color: #eee;
         text-align: center;
         line-height: 600 * 0.9px;
         position: absolute;
@@ -88,8 +26,9 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.3);
         opacity: 0;
+        transition: opacity 0.3s;
       }
 
       .image {
@@ -99,7 +38,8 @@
 
       &:hover {
         .image-mask {
-          opacity: 0.4;
+          opacity: 1;
+          cursor: pointer;
         }
       }
     }
