--- a/src/components/Footer/style.less
+++ b/src/components/Footer/style.less
@@ -1,6 +1,16 @@
 .footer {
   padding: 12px 20px;
-  font-size: 12px;
-  color: #bfbfbf;
+  font-size: 14px;
+  color: #888;
   background-color: #fff;
+
+  :global {
+    p {
+      margin: 0;
+    }
+
+    .notice {
+      font-weight: 700;
+    }
+  }
 }
