--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -1,3 +1,6 @@
+@fontColor: #999;
+@hoverColor: #111;
+
 .header {
   position: fixed;
   z-index: 1;
@@ -10,11 +13,17 @@
   align-items: center;
 
   :global {
+    .title {
+      font-size: 40px;
+      font-weight: 700;
+    }
+
     .menu {
       text-align: right;
     }
 
     .ant-menu {
+      color: @fontColor;
       border: none;
       width: 100%;
 
@@ -23,7 +32,18 @@
 
         &:hover {
           border: none;
+          color: @hoverColor;
         }
+      }
+
+      .ant-menu-submenu-title {
+        &:hover {
+          color: @hoverColor;
+        }
+      }
+
+      .ant-menu-submenu-selected {
+        color: @hoverColor;
       }
 
       .ant-menu-item {
@@ -31,7 +51,12 @@
 
         &:hover {
           border: none;
+          color: @hoverColor;
         }
+      }
+
+      .ant-menu-item-selected {
+        color: @hoverColor;
       }
     }
   }
