--- a/src/pages/About/style.less
+++ b/src/pages/About/style.less
@@ -7,6 +7,8 @@
     }
 
     .description {
+      font-size: 20px;
+      line-height: 32px;
       text-align: left;
       margin-bottom: 40px;
     }
