--- a/src/pages/Objects/style.less
+++ b/src/pages/Objects/style.less
@@ -4,6 +4,11 @@
       font-size: 24px;
     }
 
+    .title-desc {
+      font-size: 16px;
+      font-weight: 400;
+    }
+
     .description {
       text-align: left;
       color: #888;
